home about (done)

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portofolio | Ryan</title>
+    <title>Portfolio | Ryan</title>
 
     <!-- UNICONS -->
     <link
@@ -59,6 +59,105 @@
       </nav>
 
       <!-- MAIN -->
+      <main class="wrapper">
+        <!-- featured box -->
+        <section class="featured-box" id="home">
+          <div class="featured-text">
+            <div class="featured-text-card">
+              <span>Ryan Yanuar Pradana</span>
+            </div>
+            <div class="featured-name">
+              <p>I'm <span class="typedText">Programmer</span></p>
+            </div>
+            <div class="featured-text-info">
+              <p>"Experienced in web development with passion for data science, blending technical skills with data-driven insights for innovative solutions."</p>
+            </div>
+            <div class="featured-text-btn">
+              <button class="btn blue-btn">Hire Me</button>
+              <button class="btn">Download CV <i class="uil uil-file-alt"></i></button>
+            </div>
+            <div class="social_icons">
+              <div class="icon"> <i class="uil uil-github"></i> </div>
+              <div class="icon"> <i class="uil uil-instagram"></i> </div>
+              <div class="icon"> <i class="uil uil-linkedin-alt"></i> </div>
+            </div>
+          </div>
+          <div class="featured-image">
+            <div class="image">
+              <img src="./assets/images/profile.png" alt="profile">
+            </div>
+          </div>
+          <div class="scroll-icon-box">
+            <a href="#about" class="scroll-btn">
+              <i class="uil uil-mouse-alt"></i>
+              <p>Scroll Down</p>
+            </a>
+          </div>
+        </section>
+
+        <!-- about -->
+         <section class="section" id="about">
+            <div class="top-header">
+              <h1>About Me</h1>
+            </div>
+            <div class="row">
+              <div class="col">
+                <div class="about-info">
+                  <h3>My Introduction</h3>
+                  <p>
+                    I am proficient in creating websites using 
+                    HTML, CSS, and JavaScript, and am also experienced 
+                    with other programming languages such as PHP and Python. 
+                    I have a strong interest in data science, 
+                    and in addition to my programming skills, 
+                    I am capable of designing UI/UX.
+                  </p>
+                  <div class="about-btn">
+                    <button class="btn">Download CV <i class="uil uil-import"></i></button>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <!-- frontend -->
+                <div class="skills-box">
+                  <div class="skills-header">
+                    <h3>Frontend</h3>
+                  </div>
+                  <div class="skills-list">
+                    <span>HTML5</span>
+                    <span>CSS3</span>
+                    <span>JavaScript</span>
+                    <span>Tailwind</span>
+                    <span>Bootstrap</span>                   
+                  </div>
+                </div>
+                <!-- backend -->
+                <div class="skills-box">
+                  <div class="skills-header">
+                    <h3>Backend</h3>
+                  </div>
+                  <div class="skills-list">
+                    <span>Python</span>
+                    <span>JavaScript</span>
+                    <span>Django</span>
+                    <span>PHP</span>              
+                  </div>
+                </div>
+                <!-- database -->
+                <div class="skills-box">
+                  <div class="skills-header">
+                    <h3>Database</h3>
+                  </div>
+                  <div class="skills-list">
+                    <span>PostgreSQL</span>
+                    <span>MySQL</span>            
+                  </div>
+                </div>
+              </div>
+            </div>
+         </section>
+
+      </main>
 
       <!-- FOOTER -->
     </div>
