menambahkan icon dibagian skills

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
       href="https://unicons.iconscout.com/release/v4.0.8/css/line.css"
     />
 
+    <!-- font awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <!-- CSS -->
     <link rel="stylesheet" href="./assets/css/style.css" />
 
@@ -19,6 +21,12 @@
       href="./assets/images/logo.png"
       type="image/x-icon"
     />
+
+    <style>
+      .svg-filter {
+        filter: brightness(0) invert(1);
+      }
+    </style>
   </head>
   <body>
     <div class="container">
@@ -124,11 +132,11 @@
                     <h3>Frontend</h3>
                   </div>
                   <div class="skills-list">
-                    <span>HTML5</span>
-                    <span>CSS3</span>
-                    <span>JavaScript</span>
-                    <span>Tailwind</span>
-                    <span>Bootstrap</span>                   
+                    <span><i class="uil uil-html5" style="padding-right: 5px;"></i>HTML5</span>
+                    <span><i class="uil uil-css3-simple" style="padding-right: 5px;"></i>CSS3</span>
+                    <span><i class="uil uil-java-script"></i>JavaScript</span>
+                    <span><img src="./assets/images/tailwind.svg" class="svg-filter" style="height: 10px;margin: auto 0; padding-right: 5px;" alt="">Tailwind</span>
+                    <span><i class="fa-brands fa-bootstrap" style="padding-right: 5px;"></i>Bootstrap</span>                   
                   </div>
                 </div>
                 <!-- backend -->
@@ -137,10 +145,10 @@
                     <h3>Backend</h3>
                   </div>
                   <div class="skills-list">
-                    <span>Python</span>
-                    <span>JavaScript</span>
-                    <span>Django</span>
-                    <span>PHP</span>              
+                    <span><i class="fab fa-python" style="padding-right: 5px;"></i>Python</span>
+                    <span><i class="fa-brands fa-php" style="padding-right: 5px;"></i>PHP</span>              
+                    <span><i class="uil uil-java-script" style="padding-right: 5px;"></i>JavaScript</span>
+                    <span><img src="./assets/images/django.svg" class="svg-filter" style="height: 10px;margin: auto 0; padding-right: 5px;" alt="">Django</span>
                   </div>
                 </div>
                 <!-- database -->
@@ -149,8 +157,8 @@
                     <h3>Database</h3>
                   </div>
                   <div class="skills-list">
-                    <span>PostgreSQL</span>
-                    <span>MySQL</span>            
+                    <span><img src="./assets/images/postgresql.svg" class="svg-filter" style="height: 16px;margin: auto 0; padding-right: 5px;padding-top: 5px;" alt="">Postgre</span>
+                    <span><img src="./assets/images/mysql.svg" class="svg-filter" style="height: 12px;margin: auto 0; padding-right: 5px;" alt="">MySQL</span>            
                   </div>
                 </div>
               </div>
