--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
               <div class="col">
                 <div class="contact-info">
                   <h2>Find Me <i class="uil uil-corner-right-down"></i></h2>
-                  <p><i class="uil uil-envelope"></i> Email : ryanyanuarpradana@gmail.com</p>
+                  <p> Email : ryanyanuarpradana@gmail.com</p>
                 </div>
               </div>
               <div class="col">
